# nanolog

./: CMakeLists.txt  Makefile  Makefile.fmtlib  Makefile.pprintpp  README.md  azure-pipelines.yml  meson.build  vcsetup.bat
include/: nanolog.hh
sandbox/: Makefile  main.cc
scripts/: bootstrap-android-standalone.sh  bootstrap-linux-pprintpp.sh
src/: nanolog.cc
test/: main.cc
